<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/email"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/action_email"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/activity_a"
        android:orderInCategory="100"
        android:title="@string/activity_a"
        app:showAsAction="never" />
    <item
        android:id="@+id/activity_b"
        android:orderInCategory="101"
        android:title="@string/activity_b"
        app:showAsAction="never" />
    <item
        android:id="@+id/activity_c"
        android:orderInCategory="102"
        android:title="@string/activity_c"
        app:showAsAction="never" />


</menu>